--- a/404.html
+++ b/404.html
@@ -1,1 +1,3 @@
-404
+<title>404 - Furiya AI</title>
+<h1 style="text-align: center;">404 Помилка</h1>
+<p style="text-align: center;"><a href="/" title="Повернутися на головну сторінку"><span style="text-decoration: underline;">Повернутися на головну сторінку</span></a></p>
