--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-https://www.youtube.com/@furiyaai?sub_confirmation=1
+
+<script language="JavaScript">  window.location.href = "https://www.youtube.com/@furiyaai?sub_confirmation=1" </script>
+<meta http-equiv="refresh" content="0;URL=https://www.youtube.com/@furiyaai?sub_confirmation=1" />
+<title>YouTube | Furiya AI</title>
