--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 <script language="JavaScript">  window.location.href = "https://www.youtube.com/@furiyaai?sub_confirmation=1" </script>
 <meta http-equiv="refresh" content="0;URL=https://www.youtube.com/@furiyaai?sub_confirmation=1" />
 <title>YouTube | Furiya AI</title>
+<!-- <meta name="description" content="Описание"> - Опис для Інтернету -->
+<meta name="keywords" content="YouTube,Furiya AI,yt ">
