--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
-
-<script language="JavaScript">  window.location.href = "https://www.youtube.com/@furiyaai?sub_confirmation=1" </script>
-<meta http-equiv="refresh" content="0;URL=https://www.youtube.com/@furiyaai?sub_confirmation=1" />
+<!-- |301 Redirect|(html,JavaScript)
+• https://furiyaai.pp.ua/yt → https://youtube.furiyaai.pp.ua/
+• https://youtube.furiyaai.pp.ua/ → https://youtube.com/@furiyaai?sub_confirmation=1
+-->
+<script language="JavaScript">  window.location.href = "https://youtube.com/@furiyaai?sub_confirmation=1" </script>
+<meta http-equiv="refresh" content="0;URL=https://youtube.com/@furiyaai?sub_confirmation=1" />
 <title>YouTube | Furiya AI</title>
 <!-- <meta name="description" content="Описание"> - Опис для Інтернету -->
 <meta name="keywords" content="YouTube,Furiya AI,yt ">
+
+<!-- |Info|
+The site is hosted on GitHub 
+The project is located on the territory of Ukraine
+MAIL → admin@furiyaai.pp.ua
+-->
