--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!-- |301 Redirect|(html,JavaScript)
 • https://furiyaai.pp.ua/yt → https://youtube.furiyaai.pp.ua/
-• https://youtube.furiyaai.pp.ua/ → https://youtube.com/@furiyaai?sub_confirmation=1
+• https://youtube.furiyaai.pp.ua/ → https://youtube.com/@furiyaai
 -->
-<script language="JavaScript">  window.location.href = "https://youtube.com/@furiyaai?sub_confirmation=1" </script>
-<meta http-equiv="refresh" content="0;URL=https://youtube.com/@furiyaai?sub_confirmation=1" />
+<script language="JavaScript">  window.location.href = "https://youtube.com/@furiyaai" </script>
+<meta http-equiv="refresh" content="0;URL=https://youtube.com/@furiyaai" />
 <title>YouTube | Furiya AI</title>
 <!-- <meta name="description" content="Описание"> - Опис для Інтернету -->
 <meta name="keywords" content="YouTube,Furiya AI,yt ">
