--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 • https://youtube.furiyaai.pp.ua/ → https://youtube.com/@furiyaai
 -->
 
+<link rel="shortcut icon" href="/favicon.ico">
 <script language="JavaScript">  window.location.href = "https://youtube.com/@furiyaai" </script>
 <meta http-equiv="refresh" content="0;URL=https://youtube.com/@furiyaai" />
 <title>YouTube | Furiya AI</title>
