--- a/p/index.html
+++ b/p/index.html
@@ -4,6 +4,7 @@
 • https://youtube.furiyaai.pp.ua/p → https://youtube.com/@furiyaai?sub_confirmation=1
 -->
 
+<link rel="shortcut icon" href="/favicon.ico">
 <script language="JavaScript">  window.location.href = "https://youtube.com/@furiyaai?sub_confirmation=1" </script>
 <meta http-equiv="refresh" content="0;URL=https://youtube.com/@furiyaai?sub_confirmation=1" />
 <title>YouTube | Furiya AI</title>
