--- a/404.html
+++ b/404.html
@@ -1,3 +1,4 @@
 <title>404 - Furiya AI</title>
 <h1 style="text-align: center;">404 Помилка</h1>
-<p style="text-align: center;"><a href="/" title="Повернутися на головну сторінку"><span style="text-decoration: underline;">Повернутися на головну сторінку</span></a></p>
+<p style="text-align: center;"><a href="https://furiyaai-pp-ua.github.io/yt" title="Перейти на YouTube"><span style="text-decoration: underline;">Перейти на YouTube</span></a></p>
+<p style="text-align: center;"><a href="https://furiyaai-pp-ua.github.io/" title="Повернутися на головну сторінку"><span style="text-decoration: underline;">Повернутися на головну сторінку</span></a></p>
