--- a/p/index.html
+++ b/p/index.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="/favicon.ico">
 <script language="JavaScript">  window.location.href = "https://youtube.com/@furiyaai?sub_confirmation=1" </script>
 <meta http-equiv="refresh" content="0;URL=https://youtube.com/@furiyaai?sub_confirmation=1" />
-<title>YouTube | Furiya AI</title>
+<title>Furiya AI | YouTube</title>
 <!-- <meta name="description" content="Описание"> - Опис для Інтернету -->
 <meta name="keywords" content="YouTube,Furiya AI,yt ">
 
