--- a/info/index.html
+++ b/info/index.html
@@ -2,3 +2,9 @@
 <title>Furiya AI | Info - YouTube</title>
 
 1111
+
+<!-- |Info|
+The site is hosted on GitHub 
+The project is located on the territory of Ukraine
+MAIL → admin@furiyaai.pp.ua
+-->
