--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
-<!-- |301 Redirect|(html,JavaScript)
-• https://furiyaai-pp-ua.github.io/yt → https://youtube.furiyaai.pp.ua/
-• https://furiyaai.pp.ua/yt → https://youtube.furiyaai.pp.ua/
-• https://youtube.furiyaai.pp.ua/ → https://youtube.com/@furiyaai
--->
-
+<HTML><HEAD>
+<meta http-equiv="content-type" content="text/html;charset=utf-8">
 <link rel="shortcut icon" href="/favicon.ico">
-<script language="JavaScript">  window.location.href = "https://youtube.com/@furiyaai" </script>
-<meta http-equiv="refresh" content="0;URL=https://youtube.com/@furiyaai" />
-<title>Furiya AI | YouTube</title>
-<!-- <meta name="description" content="Описание"> - Опис для Інтернету -->
-<meta name="keywords" content="YouTube,Furiya AI,yt ">
-
-<!-- |Info|
-The site is hosted on GitHub 
-The project is located on the territory of Ukraine
-MAIL → admin@furiyaai.pp.ua
--->
+<TITLE>Перенаправлення</TITLE>
+<META HTTP-EQUIV="refresh" content="1; url=https://www.youtube.com/channel/UCOPDkIj6udifikECHQLDoNw">
+</HEAD>
+<BODY onLoad="location.replace('https://youtube.com/@furiyaai'+document.location.hash)">
+Перенаправляємо вас на https://youtube.com/@furiyaai</BODY>
+<!-- <script language="JavaScript">  window.location.href = "https://youtube.com/@furiyaai" </script> -->
+</HTML>
