--- a/p/index.html
+++ b/p/index.html
@@ -1,18 +1,10 @@
-<!-- |301 Redirect|(html,JavaScript)
-• https://furiyaai-pp-ua.github.io/yt/p → https://youtube.furiyaai.pp.ua/p
-• https://furiyaai.pp.ua/yt/p → https://youtube.furiyaai.pp.ua/p
-• https://youtube.furiyaai.pp.ua/p → https://youtube.com/@furiyaai?sub_confirmation=1
--->
-
+<HTML><HEAD>
+<meta http-equiv="content-type" content="text/html;charset=utf-8">
 <link rel="shortcut icon" href="/favicon.ico">
-<script language="JavaScript">  window.location.href = "https://youtube.com/@furiyaai?sub_confirmation=1" </script>
-<meta http-equiv="refresh" content="0;URL=https://youtube.com/@furiyaai?sub_confirmation=1" />
-<title>Furiya AI | YouTube</title>
-<!-- <meta name="description" content="Описание"> - Опис для Інтернету -->
-<meta name="keywords" content="YouTube,Furiya AI,yt ">
-
-<!-- |Info|
-The site is hosted on GitHub 
-The project is located on the territory of Ukraine
-MAIL → admin@furiyaai.pp.ua
--->
+<TITLE>Перенаправлення</TITLE>
+<META HTTP-EQUIV="refresh" content="1; url=https://youtube.com/@furiyaai?sub_confirmation=1">
+</HEAD>
+<BODY onLoad="location.replace('https://youtube.com/@furiyaai?sub_confirmation=1'+document.location.hash)">
+Перенаправляємо вас на https://youtube.com/@furiyaai?sub_confirmation=1</BODY>
+<!-- <script language="JavaScript">  window.location.href = "https://youtube.com/@furiyaai?sub_confirmation=1" </script> -->
+</HTML>
