--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta http-equiv="content-type" content="text/html;charset=utf-8">
 <link rel="shortcut icon" href="/favicon.ico">
 <TITLE>Перенаправлення</TITLE>
-<META HTTP-EQUIV="refresh" content="1; url=https://www.youtube.com/channel/UCOPDkIj6udifikECHQLDoNw">
+<META HTTP-EQUIV="refresh" content="1; url=https://youtube.com/@furiyaai">
 </HEAD>
 <BODY onLoad="location.replace('https://youtube.com/@furiyaai'+document.location.hash)">
 Перенаправляємо вас на https://youtube.com/@furiyaai</BODY>
